fix : CSS overlapping

--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -88,7 +88,7 @@ select {
 option {
   font-family: "Space Grotesk", sans-serif;
 }
-input {
+.address-container input {
   width: 98%;
 }
 .address-container {
